# FitHub

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONSTITUTION.md  LICENSE  README.md  package.json  pnpm-lock.yaml  railway.toml  turbo.json
apps/api/: CLAUDE.md  Dockerfile  alembic.ini  openapi.json  pyproject.toml
apps/api/.nixpacks/: build.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0024_coach_interactions.py  0025_coaching_embeddings.py  0026_wearable_schema.py  0027_plan_schema.py  0028_adaptations.py  0029_injuries.py  0030_service_role_grants.py  0031_coaching_embeddings_metadata.py  0032_adaptation_rejection_reason.py  0033_mvt_default_result_type.py  0034_coach_sessions_msgs.py  0035_add_profile_settings_fields.py  0036_add_onboarding_completed.py  0037_add_primary_muscle_group_to_movements.py  0038_add_is_tag_to_workouts.py  0039_add_profile_extended_fields.py  0040_add_pinned_movements_table.py  0041_add_variant_annotation.py  0042_injury_body_region_expand.py  0043_injury_status_lifecycle.py  0044_create_llm_usage.py  0045_create_access_requests.py  0046_create_error_events.py  0493818b4922_create_workouts.py  0f53ca56f0ef_create_results.py  101db758acaa_add_benchmarks_table.py  28f0f144919b_create_invited_emails_and_invite_hook.py  6b0fd0828bf6_create_team_sessions.py  710f16a138c9_create_movements.py  a1a4d391c80a_enable_rls_on_alembic_version.py  e3a91f64c820_create_daily_checkins.py  fa30352182ee_create_profiles.py
apps/api/app/: auth.py  config.py  db.py  logging_config.py  main.py
apps/api/app/ai/: __init__.py  adaptation.py  chat_history.py  client.py  errors.py  kill_switch.py  parse_log.py  plan_generator.py  rag.py  streaming.py  stub.py  usage.py
apps/api/app/dependencies/: admin.py
apps/api/app/engine/: __init__.py  adaptation_triggers.py  baselines.py  injury.py  metrics.py  programming.py  safety.py
apps/api/app/integrations/: __init__.py  apple_health.py  ingest_tokens.py
apps/api/app/jobs/: budget_check.py
apps/api/app/middleware/: logging.py  rate_limit.py
apps/api/app/models/: adaptation.py  admin.py  analytics.py  coach.py  injury.py  movement.py  plan.py  profile.py  result.py  team_session.py  workout.py
apps/api/app/repositories/: analytics.py  coach.py  injuries.py  movements.py  profile.py  team_sessions.py  workouts.py
apps/api/app/routers/: adaptations.py  admin.py  analytics.py  coach.py  injuries.py  integrations.py  movements.py  notifications.py  plans.py  profile.py  team_sessions.py  workouts.py
apps/api/corpus/coaching_notes/: scaling_progressions.md
apps/api/corpus/crossfit_standards/: benchmark_wods.md  movement_standards.md
apps/api/corpus/pdf/: SOURCES.md
apps/api/corpus/programming_docs/: readiness_hrv.md  (+1 more)
apps/api/evals/: eval_rag.py  golden_set.json  rag_golden_set.json  run_eval.py
apps/api/scripts/: export_openapi.py  ingest_corpus.py  ingest_pdf.py
apps/api/tests/: conftest.py  test_adaptation_feedback.py  test_adaptation_triggers.py  test_adaptations_api.py  test_admin.py  test_analytics_load.py  test_analytics_prs.py  test_analytics_readiness.py  test_analytics_training_balance.py  test_analytics_volume.py  test_apple_health_ingest.py  test_auth.py  test_budget_check.py  test_coach_injury_context.py  test_coach_multi_turn.py  test_coach_parse.py  test_coach_streaming.py  test_engine_baselines.py  test_engine_metrics.py  test_engine_programming.py  test_error_events.py  test_health.py  test_ingest_chunking.py  test_injury_api.py  test_llm_hardening.py  test_llm_ollama.py  test_llm_usage_blocking.py  test_logging.py  test_modify_workout.py  test_movements.py  test_plan_revision.py  test_plans_api.py  test_pr_detection.py  test_profile_api.py  test_rag.py  test_rate_limit.py  test_safety_classifier.py  test_stub_module.py  test_substitution.py  test_team_sessions.py  (+4 more)
(+335 files in other folders)
