[project]
name = "fithub-api"
version = "0.1.0"
description = "FitHub FastAPI backend"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "fastapi>=0.137.2",
    "instructor>=1.4",
    "pgvector>=0.3",
    "psycopg-pool>=3.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "langchain-text-splitters>=0.3",
    "torch>=2.0.0",
    "sentence-transformers>=3.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.30",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "B008",  # FastAPI uses Query/Depends/Body as default values — idiomatic, not a bug
]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

# pydantic-settings populates BaseSettings fields from env variables, so
# Settings() is always a valid call.  The pydantic mypy plugin suppresses the
# call-arg error in some environments but not others; the ignore and this
# override keep both CI and local mypy happy.
[[tool.mypy.overrides]]
module = "app.config"
warn_unused_ignores = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
